--- a/.github/workflows/dev-zus-webapp-cicd.yaml
+++ b/.github/workflows/dev-zus-webapp-cicd.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Build & deploy dev-zus-webapp.zus.network.
         run: |
           cd docker.local
-          docker-compose -f docker-compose-dev up -d --build
+          docker-compose -f docker-compose-dev.yaml up -d --build
 
       # - name: Build & Push Docker Image.
       #   id: docker_build
