--- a/.github/workflows/dev-zus-webapp-cicd.yaml
+++ b/.github/workflows/dev-zus-webapp-cicd.yaml
@@ -35,16 +35,16 @@ jobs:
       #       echo "TAG=$(echo ${GITHUB_REF#refs/*/} | sed 's/\//-/g')" >> $GITHUB_ENV
       #     fi
 
-      - name: Login To Docker Repository.
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      # - name: Login To Docker Repository.
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build & deploy dev-zus-webapp.zus.network.
         run: |
           cd docker.local
-          docker-compose -f docker-compose-dev up -d --build
+          docker-compose -f docker-compose-dev.yaml up -d --build
 
       # - name: Build & Push Docker Image.
       #   id: docker_build
