--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@zerochain/zus-sdk": "^0.0.20",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zus-sdk": "^0.0.18"
+    "react-dom": "18.2.0"
   }
 }
