--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "ts-ebml": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
