--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.0",
-    "ts-ebml": "^2.0.2"
+    "ts-ebml": "^2.0.2",
+    "react-redux": "^7.2.8",
+    "redux-persist": "^6.0.0",
+    "@reduxjs/toolkit": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "20.2.5",
