--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.8.1",
+    "@svgr/webpack": "^8.0.1",
     "@zerochain/zus-sdk": "^0.0.35",
     "clsx": "^1.2.1",
     "eslint": "8.31.0",
