--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@svgr/webpack": "^8.0.1",
     "@zerochain/zus-sdk": "^0.0.35",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "mux.js": "^6.3.0",
