Implement Multi Download Feature (#144)
Minor Fixes

Minor Fix

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@svgr/webpack": "^8.0.1",
-    "@zerochain/zus-sdk": "^0.2.6",
+    "@zerochain/zus-sdk": "^0.2.7",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^10.12.16",
+    "jszip": "^3.10.1",
     "mime": "^3.0.0",
     "mux.js": "^6.3.0",
     "next": "13.1.1",
